--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-electron-builder",
+  "name": "newsletter",
   "private": true,
   "engines": {
     "node": ">=v16.13",
@@ -34,21 +34,23 @@
     "@types/electron-devtools-installer": "2.2.0",
     "@typescript-eslint/eslint-plugin": "5.5.0",
     "@vitejs/plugin-vue": "1.10.1",
+    "autoprefixer": "^10.4.0",
     "cross-env": "7.0.3",
-    "dts-for-context-bridge": "0.6.2",
+    "dts-for-context-bridge": "^0.6.2",
     "electron": "16.0.4",
     "electron-builder": "22.14.5",
     "electron-devtools-installer": "3.2.0",
-    "eslint": "8.4.0",
-    "eslint-plugin-vue": "8.2.0",
     "nano-staged": "0.4.5",
     "playwright": "1.17.1",
+    "postcss": "^8.4.4",
     "simple-git-hooks": "2.7.0",
+    "tailwindcss": "^2.2.19",
     "typescript": "4.5.2",
     "vite": "2.6.14",
     "vue-tsc": "0.29.8"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "electron-updater": "4.6.5",
     "vue": "3.2.24",
     "vue-router": "4.0.12"
