--- a/package.json
+++ b/package.json
@@ -13,11 +13,7 @@
     "pretest": "npm run build",
     "test": "node tests/app.spec.js",
     "watch": "node scripts/watch.js",
-    "lint": "eslint . --ext js,ts,vue",
-    "typecheck-main": "tsc --noEmit -p packages/main/tsconfig.json",
-    "typecheck-preload": "tsc --noEmit -p packages/preload/tsconfig.json",
-    "typecheck-renderer": "vue-tsc --noEmit -p packages/renderer/tsconfig.json",
-    "typecheck": "npm run typecheck-main && npm run typecheck-preload && npm run typecheck-renderer",
+    "typecheck": "",
     "pretypecheck-renderer": "dts-cb -i packages/preload/src/**/*.ts -o packages/preload/exposedInMainWorld.d.ts"
   },
   "browserslist": [
@@ -25,7 +21,6 @@
   ],
   "devDependencies": {
     "@types/electron-devtools-installer": "2.2.0",
-    "@typescript-eslint/eslint-plugin": "5.5.0",
     "@vitejs/plugin-vue": "1.10.1",
     "autoprefixer": "^10.4.0",
     "cross-env": "7.0.3",
@@ -33,10 +28,7 @@
     "electron": "16.0.4",
     "electron-builder": "22.14.5",
     "electron-devtools-installer": "3.2.0",
-    "nano-staged": "0.4.5",
-    "playwright": "1.17.1",
     "postcss": "^8.4.4",
-    "simple-git-hooks": "2.7.0",
     "tailwindcss": "^2.2.19",
     "typescript": "4.5.2",
     "vite": "2.6.14",
