--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vue-tsc": "0.29.8"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.4",
     "axios": "^0.24.0",
     "electron-updater": "4.6.5",
     "fs": "^0.0.1-security",
