--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "axios": "^0.24.0",
     "electron-updater": "4.6.5",
     "fs": "^0.0.1-security",
+    "js-export-excel": "^1.1.4",
     "vue": "3.2.24",
-    "vue-router": "4.0.12"
+    "vue-router": "4.0.12",
+    "vue3-charts": "^1.1.25"
   }
 }
